--- a/src/webapp/WEB-INF/pages/cars.html
+++ b/src/webapp/WEB-INF/pages/cars.html
@@ -20,8 +20,8 @@
     <tbody>
     <tr th:each="car:${cars}">
         <td th:text="${car.getModel()}">Model</td>
-        <td th:text="${car.getNumber()}">Series</td>
-        <td th:text="${car.getSeries()}">Number</td>
+        <td th:text="${car.getSeries()}">Series</td>
+        <td th:text="${car.getNumber()}">Number</td>
     </tr>
     </tbody>
 </table>
